<?xml version="1.0" encoding="utf-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <parent>
    <groupId>de.ingrid</groupId>
    <artifactId>ingrid-releases-pom</artifactId>
    <version>5.11.0</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <artifactId>ingrid-udk-importer</artifactId>
  <version>5.15.0.3324-SNAPSHOT</version>
  <name>InGrid UDK-IGC Importer (IGC Updater)</name>
  <description>This component migrates a IGC database.</description>

  <properties>
    <ingrid-codelist-service.version>5.7.0</ingrid-codelist-service.version>
    <ingrid-utils.version>5.5.0</ingrid-utils.version>
    <ingrid-utils-ige.version>5.3.0</ingrid-utils-ige.version>
  </properties>

  <build>
    <finalName>${project.artifactId}-${project.version}</finalName>
    <plugins>
      <plugin>
        <groupId>org.openrewrite.maven</groupId>
        <artifactId>rewrite-maven-plugin</artifactId>
        <version>4.35.1</version>
        <configuration>
          <activeRecipes>
            <recipe>org.openrewrite.java.migrate.UpgradeJava17</recipe>
          </activeRecipes>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.openrewrite.recipe</groupId>
            <artifactId>rewrite-migrate-java</artifactId>
            <version>1.13.0</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <!-- Add Type of Component to be added to Manifest of Installer for Upgrade Server -->
        <configuration>
          <archive>
            <manifestEntries>
              <ingridComponentType>UDK_IMPORTER_UPDATER</ingridComponentType>
            </manifestEntries>
          </archive>
        </configuration>
        <executions>
          <!-- first build our exe jar with different main class -->
          <execution>
            <id>make-jar-with-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <appendAssemblyId>true</appendAssemblyId>
              <descriptors>
                <descriptor>src/main/assembly/jar-with-dependencies.xml</descriptor>
              </descriptors>
              <archive>
                <manifest>
                  <mainClass>de.ingrid.importer.udk.Importer</mainClass>
                  <packageName>de.ingrid.importer.udk</packageName>
                </manifest>
              </archive>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>external.atlassian.jgitflow</groupId>
        <artifactId>jgitflow-maven-plugin</artifactId>
        <version>1.0-m5.1</version>
        <configuration>
          <defaultOriginUrl>https://github.com/informationgrid/ingrid-udk-importer</defaultOriginUrl>
          <noDeploy>true</noDeploy>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jdeprscan-plugin</artifactId>
        <version>3.0.0-alpha-1</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <!-- ==================== DEPENDENCY MANAGEMENT ==================== -->
<!--
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>de.ingrid</groupId>
        <artifactId>ingrid-version-management-pom</artifactId>
        <version>3.6.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
-->
  <!-- ==================== DEPENDENCIES ==================== -->
  <dependencies>
    <dependency>
      <!-- Needed for Mapping of Profile -->
      <groupId>de.ingrid</groupId>
      <artifactId>ingrid-utils-ige</artifactId>
      <version>${ingrid-utils-ige.version}</version>
      <exclusions>
        <exclusion>
          <artifactId>log4j</artifactId>
          <groupId>log4j</groupId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>de.ingrid</groupId>
      <artifactId>ingrid-utils</artifactId>
      <version>${ingrid-utils.version}</version>
      <exclusions>
        <exclusion>
          <groupId>org.springframework</groupId>
          <artifactId>spring-beans</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.springframework</groupId>
          <artifactId>spring-core</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.thoughtworks.xstream</groupId>
          <artifactId>xstream</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>de.ingrid</groupId>
      <artifactId>ingrid-codelist-service</artifactId>
      <version>${ingrid-codelist-service.version}</version>
      <exclusions>
        <exclusion>
          <groupId>commons-httpclient</groupId>
          <artifactId>commons-httpclient</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.codehaus.jettison</groupId>
          <artifactId>jettison</artifactId>
        </exclusion>
        <exclusion>
          <groupId>opensymphony</groupId>
          <artifactId>quartz</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.springframework</groupId>
          <artifactId>spring</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>5.1.6</version>
    </dependency>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>9.4.1212</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.17.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-1.2-api</artifactId>
      <version>2.17.1</version>
    </dependency>
    <!-- Needed for log4j2, otherwise setting feature error occurs  -->
    <dependency>
      <groupId>xerces</groupId>
      <artifactId>xercesImpl</artifactId>
      <version>2.12.2</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.9.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>commons-configuration</groupId>
      <artifactId>commons-configuration</artifactId>
      <version>1.3</version>
      <exclusions>
        <exclusion>
          <groupId>jdom</groupId>
          <artifactId>jdom</artifactId>
        </exclusion>
        <exclusion>
          <groupId>ant</groupId>
          <artifactId>ant-optional</artifactId>
        </exclusion>
        <exclusion>
          <groupId>commons-beanutils</groupId>
          <artifactId>commons-beanutils</artifactId>
        </exclusion>
        <exclusion>
          <groupId>commons-digester</groupId>
          <artifactId>commons-digester</artifactId>
        </exclusion>
        <exclusion>
          <groupId>servlet-api</groupId>
          <artifactId>servlet-api</artifactId>
        </exclusion>
        <exclusion>
          <groupId>commons-jxpath</groupId>
          <artifactId>commons-jxpath</artifactId>
        </exclusion>
        <exclusion>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
        </exclusion>
        <exclusion>
          <groupId>commons-logging</groupId>
          <artifactId>commons-logging-api</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
<!--
    <dependency>
        <groupId>ojdbc</groupId>
        <artifactId>ojdbc</artifactId>
        <version>14</version>
    </dependency>
-->
    <dependency>
      <groupId>com.oracle</groupId>
      <artifactId>ojdbc7</artifactId>
      <version>12.1.0.2</version>
    </dependency>
    <dependency>
      <!-- Needed at runtime for reading 3_2_0_udk_codelists_serialized.xml -->
      <groupId>com.thoughtworks.xstream</groupId>
      <artifactId>xstream</artifactId>
      <version>1.4.19</version>
    </dependency>
  </dependencies>
  <!-- NEVER DELETE: InGrid repo needed for download of parent pom if not present ! -->
  <repositories>
    <repository>
      <id>nexus</id>
      <name>Nexus Repo</name>
      <url>https://nexus.informationgrid.eu/repository/maven-public</url>
    </repository>
    <repository>
      <id>nexus_ojdbc7</id>
      <name>Nexus Repo for ojdbc7</name>
      <url>https://nexus.saas.hand-china.com/content/repositories/rdc</url>
    </repository>
  </repositories>
  <scm>
    <connection>scm:git:git@github.com:informationgrid/ingrid-udk-importer.git</connection>
    <developerConnection>scm:git:git@github.com:informationgrid/ingrid-udk-importer.git</developerConnection>
    <tag>HEAD</tag>
  </scm>
  <profiles>
    <profile>
      <id>release-udk</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <systemPropertyVariables>
                <udkReleaseVersion>${project.version}</udkReleaseVersion>
              </systemPropertyVariables>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
